--- a/FroggerStyleProject/bin/.gitignore
+++ b/FroggerStyleProject/bin/.gitignore
@@ -1,4 +1,17 @@
-/Frame.class
-/SimpleAudioPlayer.class
-/Sprite.class
 /imgs/
+/Background.class
+/Bike.class
+/Bike2.class
+/Death.class
+/Door.class
+/End.class
+/FFScrolling.class
+/FTFScrolling.class
+/Fart.class
+/Fart2.class
+/Frame.class
+/G.class
+/HL.class
+/HL3.class
+/HoverboardFull.class
+/Minion.class
