change width and hegiht to 1000 inb backgrounfd

--- a/FroggerStyleProject/bin/.gitignore
+++ b/FroggerStyleProject/bin/.gitignore
@@ -15,3 +15,13 @@
 /HL3.class
 /HoverboardFull.class
 /Minion.class
+/Minion2.class
+/Minion3.class
+/Minion4.class
+/Minion5.class
+/Minion6.class
+/Minion7.class
+/SFScrolling.class
+/SimpleAudioPlayer.class
+/Spawner.class
+/Sprite.class
