WHOLE PROJECT FOR SPACE INVADERS

--- a/FroggerStyleProject/bin/.gitignore
+++ b/FroggerStyleProject/bin/.gitignore
@@ -1,27 +1,15 @@
-/imgs/
+/Alien.class
+/AlienBlue.class
+/AlienBullet.class
+/AlienGreen.class
+/AlienPink.class
 /Background.class
-/Bike.class
-/Bike2.class
-/Death.class
-/Door.class
 /End.class
-/FFScrolling.class
-/FTFScrolling.class
-/Fart.class
-/Fart2.class
 /Frame.class
-/G.class
-/HL.class
-/HL3.class
-/HoverboardFull.class
-/Minion.class
-/Minion2.class
-/Minion3.class
-/Minion4.class
-/Minion5.class
-/Minion6.class
-/Minion7.class
-/SFScrolling.class
+/Shield.class
+/Ship.class
+/Shot.class
 /SimpleAudioPlayer.class
-/Spawner.class
 /Sprite.class
+/imgs/
+/shipBullet.class
